--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,10 @@
 /*
+  File name: mobile.css
+  Author's name: Paul Bialo
+  Web site name: Paul Bialo's Mobile Personal Portfolio 
+  File description: CSS file for mobile.html generated with ThemeRoller
+*/
+/*
 * jQuery Mobile 1.3.1
 * Git HEAD hash: 74b4bec049fd93e4fe40205e6157de16eb64eb46 <> Date: Mon Apr 8 2013 19:41:28 UTC
 * http://jquerymobile.com
@@ -8,10 +14,6 @@
 * http://jquery.org/license
 *
 */
-
-
-/* Swatches */
-/* A
 -----------------------------------------------------------------------------------------------------------*/
 .ui-bar-a {
 	border: 1px solid #2f2f2f /*{a-bar-border}*/;
@@ -19,12 +21,12 @@
 	color: #000000 /*{a-bar-color}*/;
 	font-weight: bold;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ 1px /*{a-bar-shadow-y}*/ 0 /*{a-bar-shadow-radius}*/ #eeeeee /*{a-bar-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #FFee5d /*{a-bar-background-start}*/), to( #8c7d30 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #FFee5d /*{a-bar-background-start}*/, #8c7d30 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #FFee5d /*{a-bar-background-start}*/, #8c7d30 /*{a-bar-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #FFee5d /*{a-bar-background-start}*/, #8c7d30 /*{a-bar-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #FFee5d /*{a-bar-background-start}*/, #8c7d30 /*{a-bar-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #FFee5d /*{a-bar-background-start}*/, #8c7d30 /*{a-bar-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #ccb647 /*{a-bar-background-start}*/), to( #ccb647 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #ccb647 /*{a-bar-background-start}*/, #ccb647 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #ccb647 /*{a-bar-background-start}*/, #ccb647 /*{a-bar-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #ccb647 /*{a-bar-background-start}*/, #ccb647 /*{a-bar-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #ccb647 /*{a-bar-background-start}*/, #ccb647 /*{a-bar-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #ccb647 /*{a-bar-background-start}*/, #ccb647 /*{a-bar-background-end}*/);
 }
 .ui-bar-a .ui-link-inherit {
 	color: #000000 /*{a-bar-color}*/;
@@ -515,4 +517,8 @@ a.ui-link-inherit {
 	outline-width: 1px;
 	outline-style: auto;
 }
-			
+		
+#headerlogo img {
+ 	display: block;
+    margin: auto;
+}
